[package]
name = "simple-ws-server"
description = "Simple WS server based on tokio-tungstenite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio = { version = "1.0.0", default-features = false, features = ["io-util", "io-std", "macros", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.18.0", default-features = false }
tungstenite = { version = "0.18.0", default-features = false }
futures-channel = "0.3"
hyper = { version = "0.14", default-features = false, features = ["http1", "server", "tcp"] }
url = "2.0.0"
env_logger = "0.9"

[features]
default = ["connect", "handshake"]
connect = ["stream", "tokio/net", "handshake"]
handshake = ["tokio-tungstenite/handshake", "tungstenite/handshake"]
stream = []
